--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@quasar/extras": "^1.16.4",
     "pinia": "^3.0.3",
     "quasar": "^2.16.0",
+    "socket.io-client": "^4.8.1",
     "vue": "3.5.20",
     "vue-router": "^4.0.12"
   },
